test/classes/errors/newValueNotType2.legacy.good
newValueNotType2.chpl:7: error: cannot use decorator borrowed on a value
newValueNotType2.chpl:7: error: invalid use of 'new'
newValueNotType2.chpl:10: error: cannot use decorator unmanaged on a value
newValueNotType2.chpl:10: error: invalid use of 'new'
